style/summary_login/signup_responsive.css
@media (max-width: 950px) {
    .back-arrow {
        top: 40px;
        left: 40px;
    }
}

@media (max-width: 600px) {
    .signup-button-primary {
        max-width: 100%;
        font-size: 18px;
    }
}

@media (max-width: 500px) {
    .login-title {
        font-size: 47px;
    }

}

@media (max-width: 400px) {
    .login-title {
        font-size: 43px;
    }
    
    .login-footer {
        margin-top: 40px;
        padding-bottom: 32px;
        display: flex;
        justify-content: center;
        gap: 16px;
        flex-wrap: wrap;
    }
    
    .input-error {
        font-size: 16px;
    }

    .back-arrow {
        top: 40px;
        left: 40px;
    }
}

@media (min-width: 1260px) and (max-width: 1300px) and (min-height: 780px) and (max-height: 820px) {
    .login-footer {
        margin-top: 20px;
    }
}

